# lab2_MM

./: CMakeLists.txt  README.md
include/: imitation_create.h  key_gen.h
src/: imitation_create.c  key_gen.c  main.c
